Добавлен ключ к api openweathermap

--- a/WebAppWeather/appsettings.json
+++ b/WebAppWeather/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=weatherforecast.db"
+  },
+  "ApiKeys": {
+    "OpenWeatherMapKey": "cba52ae29a48ad174a2eeafb50a3490c"
   }
 }
